# NEXA

./: Cargo.toml  README.md
crates/nexa-ast/: Cargo.toml
crates/nexa-ast/src/: lib.rs
crates/nexa-cli/: Cargo.toml
crates/nexa-cli/src/: main.rs
crates/nexa-cli/tests/: run_hello.rs
crates/nexa-cli/tests/fixtures/: add.nxa  hello.nxa
crates/nexa-effects/: Cargo.toml
crates/nexa-effects/src/: lib.rs
crates/nexa-errors/: Cargo.toml
crates/nexa-errors/src/: lib.rs
crates/nexa-lexer/: Cargo.toml
crates/nexa-lexer/src/: lib.rs
crates/nexa-llvm/: Cargo.toml
crates/nexa-llvm/src/: lib.rs
crates/nexa-lsp/: Cargo.toml
crates/nexa-lsp/src/: lib.rs
crates/nexa-mir/: Cargo.toml
crates/nexa-mir/src/: lib.rs
crates/nexa-ownership/: Cargo.toml
crates/nexa-ownership/src/: lib.rs
crates/nexa-parser/: Cargo.toml
crates/nexa-parser/src/: lib.rs
crates/nexa-resolve/: Cargo.toml
crates/nexa-resolve/src/: lib.rs
crates/nexa-session/: Cargo.toml
crates/nexa-session/src/: lib.rs
crates/nexa-types/: Cargo.toml
crates/nexa-types/src/: lib.rs
crates/nexa-vm/: Cargo.toml
crates/nexa-vm/src/: compile.rs  lib.rs
