[workspace]
resolver = "2"
members = [
    "crates/nexa-cli",
    "crates/nexa-lexer",
    "crates/nexa-parser",
    "crates/nexa-ast",
    "crates/nexa-types",
    "crates/nexa-vm",
    "crates/nexa-errors",
    "crates/nexa-session",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/nexa"
